Remove the deprecated aboutui, Add localization, Add pyinstaller spec

--- a/res/fasta_extract.glade
+++ b/res/fasta_extract.glade
@@ -218,7 +218,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="hexpand">True</property>
-                    <property name="text" translatable="yes">1</property>
+                    <property name="text" translatable="no">1</property>
                     <property name="input-purpose">digits</property>
                   </object>
                   <packing>
